...
        android:id="@+id/dividerDataEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDataEditHint" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvDataEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerDataEdit">

        <androidx.appcompat.widget.LinearLayoutCompat
...
                style="@style/AppButtonActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="6dp"
                android:padding="16dp"
                android:text="@string/data_edit_select_records"
                app:icon="@drawable/ic_list_24px"
                app:iconGravity="end"
                app:iconTint="?appLightTextColor" />

            <androidx.cardview.widget.CardView
                style="@style/SettingsCard"
...
                        android:gravity="center"
                        android:text="@string/something_selected"
                        android:textColor="?appTextPrimaryColor"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDataEditSelectedRecords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="?appTextPrimaryColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
...
                            style="@style/SettingsText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            android:text="@string/data_edit_change_activity"
                            app:layout_constraintEnd_toStartOf="@id/checkboxDataEditChangeActivity"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDataEditChangeActivityHint"
                            style="@style/SettingsSecondaryText"
...
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDataEditChangeComment"
                            style="@style/SettingsText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/data_edit_change_comment"
                            app:layout_constraintEnd_toStartOf="@id/checkboxDataEditChangeComment"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputDataEditChangeComment"
                            style="@style/ChangeItemInputFieldDialog"
...
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvDataEditChangeComment"
                            tools:visibility="visible">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDataEditChangeComment"
                                style="@style/EditTextMultiLine"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/change_record_comment_hint" />

                        </com.google.android.material.textfield.TextInputLayout>
...
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDataEditAddTag"
                            style="@style/SettingsText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/data_edit_change_add_tag"
                            app:layout_constraintEnd_toStartOf="@id/checkboxDataEditAddTag"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDataEditAddTagsPreview"
                            android:layout_width="match_parent"
...
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDataEditRemoveTag"
                            style="@style/SettingsText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/data_edit_change_remove_tag"
                            app:layout_constraintEnd_toStartOf="@id/checkboxDataEditRemoveTag"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDataEditRemoveTagsPreview"
                            android:layout_width="match_parent"
...
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDataEditDeleteRecords"
                            style="@style/SettingsText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/archive_dialog_delete"
                            app:layout_constraintEnd_toStartOf="@id/checkboxDataEditDeleteRecords"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkboxDataEditDeleteRecords"
                            android:layout_width="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDataEditChange"
                style="@style/AppButtonActive"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:text="@string/data_edit_button_change" />

            <com.example.util.simpletimetracker.feature_views.DividerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
...
