...
    <string name="day_of_week_wednesday">Wed</string>
    <string name="day_of_week_thursday">Thu</string>
    <string name="day_of_week_friday">Fri</string>
    <string name="day_of_week_saturday">Sat</string>
    <string name="day_of_week_sunday">Sun</string>

    <string name="activity_hint">Activities</string>
    <string name="category_hint">Categories</string>
    <string name="record_tag_hint">Record tags</string>
    <string name="record_tag_hint_short">Tags</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="something_selected">Selected:</string>
    <string name="select_all">Select all</string>
...
    <string name="range_last">Last 7 days</string>
    <string name="range_select_day">Select date</string>
    <string name="range_select_week">Select week</string>
    <string name="range_select_month">Select month</string>
    <string name="range_select_year">Select year</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="time_hour">h</string>
    <string name="time_minute">m</string>
    <string name="time_second">s</string>

...
    <string name="data_edit_change_activity">Change activity</string>
    <string name="data_edit_change_activity_hint">Tags of current activity will be removed.</string>
    <string name="data_edit_change_comment">Change comment</string>
    <string name="data_edit_change_add_tag">Add tags</string>
    <string name="data_edit_change_remove_tag">Remove tags</string>
    <string name="data_edit_button_change">Change</string>
    <string name="data_edit_success_message">Data changed</string>

    <!--  Records filter  -->
    <string name="records_filter_select_tags">Select tags</string>
    <string name="records_filter_filter_tags">Exclude tags</string>
    <string name="records_filter_manually_filtered">Filtered</string>
    <string name="records_filter_no_comment">No comment</string>
    <string name="records_filter_any_comment">Any comment</string>
    <string name="records_filter_select">Select</string>
    <string name="records_filter_invert_selection">Invert selection</string>

    <!--  Icon emoji category  -->
    <string name="emojiGroupSmileys">Smileys &amp; Emotion</string>
    <string name="emojiGroupPeople">People &amp; Body</string>
    <string name="emojiGroupAnimals">Animals &amp; Nature</string>
...
